--- a/libStyle.css
+++ b/libStyle.css
@@ -44,7 +44,7 @@ body
 {
     margin-left: 40px;
 }
-.homeButton, .searchButton, .logoutButton, .profileButton, .tableButton, .seeAll
+.homeButton, .searchButton, .logoutButton, .profileButton, .tableButton, .seeAll, .inProfile
 {
     padding:10px;
     border-radius: 10px;
@@ -158,4 +158,17 @@ table, th, td
 {
    margin-left:300px;
 }
+.pProfile 
+{
+    margin:50px;
+    font-size: 115%;
+}
+.inProfile
+{
+    margin: 0px;
+    margin-bottom:50px;
+    margin-left:20px;
+    font-size: 60%;
+}
+    
     
